# injector

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic.cpp  compile_time.cpp  hello_world.cpp  injection.cpp  invoke.cpp  resolver.cpp
include/injector/: ctti.hpp  ctti.inl  fnv1a.hpp  fnv1a.inl  identifier.hpp  identifier.inl  injector.hpp  injector.inl
